# pyturbseq

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pyturbseq_Tutorial.html  Pyturbseq_Tutorial.ipynb  README.md  Tutorial.ipynb  de.py  final_test.py  interaction.py  perturbseq.py  plot.py  processing.py  pyproject.toml  pytest.ini  setup.py
.cursor/rules/: env-activate.mdc
.github/workflows/: ci.yml
pyturbseq/: __init__.py  calling.py  cellranger.py  de.py  guides.py  interaction.py  perturbseq.py  plot.py  processing.py  utils.py
src/pyturbseq/: __init__.py  calling.py  cellranger.py  de.py  interaction.py  perturbseq.py  utils.py
tests/: __init__.py  conftest.py  prepare_test_data.py  test_calling.py  test_cellranger.py  test_de.py  test_guides.py  test_integration.py  test_interaction.py  test_plot.py  test_utils.py
tests/data/: README.md
tutorials/: basics.ipynb  dual_perturbation.ipynb
