[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyturbseq"
version = "0.0.15"
description = "A Python package for perturbational single-cell data"
readme = "README.md"
authors = [
    { name = "Aidan Winters", email = "aidanw@arcinstitute.org" }
]
dependencies = [
    "scanpy",
    "scipy",
    "scikit-learn",
    "umap-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "fastcluster",
    "adjusttext",
    "pydeseq2",
    "statsmodels",
    "adpbulk",
    "anndata",
    "hdbscan",
    "dcor"
]
requires-python = ">=3.8,<3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0"
]

[tool.setuptools.packages.find]
include = ["pyturbseq*"]
exclude = ["archive*"]

[project.urls]
repository = "https://github.com/aidanwinters/pyturbseq"