[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyturbseq"
version = "0.1.0"
description = "A Python package for perturbational single-cell data analysis"
readme = "README.md"
authors = [
    { name = "Aidan Winters", email = "aidanw@arcinstitute.org" }
]
dependencies = [
    "scanpy>=1.9.0",
    "scipy>=1.8.0,<=1.15.3",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.0",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
    "fastcluster>=1.2.0",
    "adjusttext>=0.7.0",
    "pydeseq2>=0.3.0",
    "statsmodels>=0.14.0",
    "adpbulk>=0.1.0",
    "anndata>=0.8.0",
    "hdbscan>=0.8.0",
    "dcor>=0.5.0",
    "upsetplot>=0.6.0",
    "joblib>=1.0.0"
]
requires-python = ">=3.9,<3.14"

[project.urls]
repository = "https://github.com/aidanwinters/pyturbseq"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyturbseq*"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.19.0"
]



[tool.mypy]
mypy_path = "src"
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:pydeseq2.*",
    "ignore::FutureWarning:pandas.*",
    "ignore::UserWarning:anndata.*"
]
